# iqtidor

./: .env  .gitignore  db.sqlite3  final.json  final.xlsx  main.py  nginx.conf  pyproject.toml  results.json  roadmap.md
config/: settings.py  urls.py
tests/: admin.py  models.py  serializers.py  urls.py  views.py
tests/migrations/: 0001_initial.py  0002_alter_test_question.py  0003_test_image.py  0004_remove_test_subject.py  0005_answer_image_alter_dtm_participants.py  0006_dtm_id_open.py  0007_remove_dtm_id_open.py  0008_dtm_is_public.py  0009_cefr_question_questionanswer.py  0010_remove_questionanswer_test_questionanswer_question.py  0011_alter_answer_options_alter_block_options_and_more.py  0012_alter_question_cefr.py  0013_banner.py  0014_banner_is_active.py  0015_cefr_group_cefr_passing_score_dtm_group_and_more.py  0016_cefr_price_dtm_price.py  0017_alter_cefrresult_degree_alter_cefrresult_points_and_more.py  0018_block_ball.py  0019_alter_cefrresult_status_alter_dtmresult_status.py  0020_rename_points_cefrresult_according_to_the_answers_found_and_more.py  0021_alter_rash_file.py  0022_cefrresult_correct_answers.py  0023_alter_cefrresult_degree.py  0024_alter_cefrresult_degree.py  0025_remove_cefr_group_remove_dtm_group_and_more.py  0026_cefr_uuid_dtm_uuid.py  0027_dtmresult_teacher.py  0028_cefrresult_teacher.py  0029_alter_banner_options_alter_cefrresult_options_and_more.py  0030_cefrresult_percentage.py  (+4 more)
users/: admin.py  manager.py  middleware.py  models.py  serializers.py  urls.py  views.py
utils/: generate_answers_sheet.py  generate_certificate.py
(+16 files in other folders)
