[project]
name = "iqtidor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "django-cors-headers>=4.7.0",
    "django-filter>=25.1",
    "django-unfold>=0.62.0",
    "djangorestframework>=3.16.0",
    "drf-yasg>=1.21.10",
    "gunicorn>=23.0.0",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "psycopg>=3.2.9",
    "python-decouple>=3.8",
    "reportlab>=4.4.3",
]
